2003-04-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_aclocal_m4): Do not parse ACLOCAL_AMFLAGS
	and glob for m4_files (We've got all local m4 files while
	tracing m4_include's).  Diagnose ACLOCAL_M4_SOURCES as obsolete.
	Distribute aclocal.m4 only at the top-level.
	(my_glob): Remove.  This fixes PR automake/11.
	(handle_dist): Strip leading `./' from directories.
	* aclocal.in (add_file): Output 'm4_include([file.m4])' instead
	of copying local files.
	(write_aclocal, parse_arguments): Bump copyright date.
	* configure.in: De not build m4/amversion.m4 from here ...
	* m4/Makefile.am ($(srcdir)/amversion.m4): ... do this here.
	(nodist_m4data_DATA): Use $(srcdir)/amversion.m4 instead
	of amversion.m4.
	* tests/Makefile.am (XFAIL_TESTS): Remove aclocal5.test.
	(TESTS): Remove aclocal2.test.  Do not test aclocal.test twice.
	* tests/aclocal2.test: Delete (pointless).
	* tests/aclocal5.test: Make sure configure's dependencies are
	distributed.
	* tests/acinclude.test: Adjust to search for m4_include.
	* tests/dirlist.test, tests/dup3.test: Run $AUTOCONF and grep
	configure instead of aclocal.m4.

	For PR automake/46:
	* automake.in (scan_aclocal_m4): Work in all directories, not only
	the top-level.  Prepend $(top_srcdir) in front of each aclocal.m4
	dependency.
	* lib/am/configure.am (config.status, configure, $(ACLOCAL_M4)):
	Define rebuild rules in each directory.
	* tests/subdir8.test: Augment to exercise aclocal.m4's dependencies
	from the top-level directory.
	* tests/aclocal5.test: New file.  Exercise aclocal.m4's dependencies
	from a subdirectory.
	* tests/Makefile.am (TESTS): Add aclocal5.test.
	(XFAIL_TESTS): Replace subdir8.test by aclocal5.test.

2003-04-24  Akim Demaille  <akim@epita.fr>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/46:
	* lib/am/configure.am (%MAKEFILE-IN%): If Makefile.in is rebuilt
	because of one of configure's dependencies, run automake without
	argument to update the whole tree at once.  Depend upon