@@ -17,6 +17,17 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 
+
+## This dummy rule is called from subdirectories whenever one of the
+## top-level Makefile's dependencies must be updated.  It does not
+## need to depend on %MAKEFILE% because GNU make will always make sure
+## %MAKEFILE% is updated before considering the am--refresh target.
+if %?TOPDIR_P%
+.PHONY: am--refresh
+am--refresh:
+endif %?TOPDIR_P%
+
+
 ## --------------------- ##
 ## Building Makefile.*.  ##
 ## --------------------- ##
@@ -30,8 +41,9 @@
 	@for dep in $?; do \
 	  case '$(top_srcdir)/%CONFIGURE-AC% $(ACLOCAL_M4) %CONFIGURE_DEPS%' in \
 	    *$$dep*) \
-	      echo ' cd $(top_srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%'; \
-	      cd $(top_srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%; \
+?TOPDIR_P?	      echo ' cd $(srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%'; \
+?TOPDIR_P?	      cd $(srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%; \
+?!TOPDIR_P?	      cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh; \
 	      exit 0;; \
 	  esac; \
 	done; \
@@ -52,14 +64,16 @@
 ## Don't prefix $(top_builddir), because GNU make will strip it out
 ## when it's `.'.
 	  *config.status*) \
-	    echo ' cd $(top_builddir) && $(SHELL) ./config.status'; \
-	    cd $(top_builddir) && $(SHELL) ./config.status;; \
+?TOPDIR_P?	    echo ' $(SHELL) ./config.status'; \
+?TOPDIR_P?	    $(SHELL) ./config.status;; \
+?!TOPDIR_P?	    cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh;; \
 	  *) \
 ## FIXME: $(am__depfiles_maybe) lets us re-run the rule to create the
 ## .P files.  Ideally we wouldn't have to do this by hand.
 	    echo ' cd $(top_builddir) && $(SHELL) ./config.status %CONFIG-MAKEFILE% $(am__depfiles_maybe)'; \
 	    cd $(top_builddir) && $(SHELL) ./config.status %CONFIG-MAKEFILE% $(am__depfiles_maybe);; \
 	esac;
+
 
 ## --------------------------- ##
 ## config.status & configure.  ##
@@ -74,10 +88,12 @@ DIST_COMMON += configure %CONFIGURE-AC%
 endif %?TOPDIR_P%
 
 $(top_builddir)/config.status: $(top_srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
-	cd $(top_builddir) && $(SHELL) ./config.status --recheck
+?TOPDIR_P?	$(SHELL) ./config.status --recheck
+?!TOPDIR_P?	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 
 $(top_srcdir)/configure: %MAINTAINER-MODE% $(top_srcdir)/%CONFIGURE-AC% $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES) %CONFIGURE_DEPS%
-	cd $(top_srcdir) && $(AUTOCONF)
+?TOPDIR_P?	cd $(srcdir) && $(AUTOCONF)
+?!TOPDIR_P?	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 
 
 ## ------------ ##
@@ -86,17 +102,21 @@ $(top_srcdir)/configure: %MAINTAINER-MODE% $(top_srcdir)/%CONFIGURE-AC% $(ACLOCA
 
 ## aclocal.m4 must be built by the top-level Makefile, because this is
 ## where the user is expected to define $(ACLOCAL_AMFLAGS).
+##
+## Whenever a configure dependency changes we need to rebuild
+## aclocal.m4 too.  Changing configure.ac, or any file included by
+## aclocal.m4 might require adding more files to aclocal.m4.  Hence
+## the %CONFIGURE_DEPS% dependency.
 if %?REGEN-ACLOCAL-M4%
-$(ACLOCAL_M4): %MAINTAINER-MODE% $(top_srcdir)/%CONFIGURE-AC% %ACLOCAL_M4_DEPS%
-?TOPDIR_P?	$(ACLOCAL) $(ACLOCAL_AMFLAGS)
-?!TOPDIR_P?	cd $(top_srcdir) && $(MAKE) $(AM_MAKEFLAGS) '$$(ACLOCAL_M4)'
+$(ACLOCAL_M4): %MAINTAINER-MODE% $(top_srcdir)/%CONFIGURE-AC% %ACLOCAL_M4_DEPS% %CONFIGURE_DEPS%
+?TOPDIR_P?	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
+?!TOPDIR_P?	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 endif %?REGEN-ACLOCAL-M4%
 
 
 ## --------- ##
 ## cleanup.  ##
 ## --------- ##
-
 
 ## We special-case config.status here.  If we do it as part of the
 ## normal clean processing for this directory, then it might be
