@@ -9,6 +9,7 @@ aclocal.test \
 aclocal3.test \
 aclocal4.test \
 aclocal5.test \
+aclocal6.test \
 acoutnoq.test \
 acoutpt.test \
 acoutpt2.test \
