@@ -100,7 +100,7 @@ New in 1.7a:
 * For similar reasons, the rules to rebuild configure, config.status, and
   aclocal.m4 are now defined in all directories.  Note that if you
   were using the CONFIG_STATUS_DEPENDENCIES and CONFIGURE_DEPENDENCIES
-  (undocumented) variables, you will have to define them in all directories.
+  (undocumented) variables, you should better define them in all directories.
   This is easily done using an AC_SUBST.
 
 * aclocal will now use `m4_include' instead of copying local m4 files
@@ -116,8 +116,6 @@ New in 1.7a:
   to override the aclocal.m4 dependencies computed (inaccurately) by
   older versions of Automake; this variable should be considered obsolete
   and will be flagged as such when running `automake -Wobsolete'.
-  Note that local m4 files are no longer dependencies of aclocal.m4
-  (since it only includes them) but they are dependencies of configure.
 
 
 New in 1.7:
