@@ -1,3 +1,15 @@
+2003-04-25  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/aclocal6.test: New file.
+	* lib/am/configure.am (am--refresh): New rule.
+	(%MAKEFILE-IN%, %MAKEFILE%, $(top_builddir)/config.status,
+	$(top_srcdir)/configure): Call the top-level am--refresh from
+	subdirectories.
+	($(ACLOCAL_M4)): Depend upon %CONFIGURE_DEPS%.  Call the
+	top-level am--refresh when not in the top-level directory.
+	Fix jump directories for VPATH builds.
+	Suggested by Raja R. Harinath.
+
 2003-04-24  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (scan_aclocal_m4): Do not parse ACLOCAL_AMFLAGS
